sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:22: error: not found: value ddebut
    debut=ddebut+1
          ^